				Dear Emacs, please make this -*-Text-*- mode!
	**************************************************
	*						 *
	*	       1.4 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.4.0


NEW FEATURES

    o	Function identical(), a fast and reliable way to test for exact
	equality of two objects.

    o   bxp() has a show.names argument allowing labels on a single
	boxplot

    o   Function nsl() to look up IP addresses of hosts: intended as
	a way to test for internet connectivity.

    o	R CMD Rd2dvi has more convenient defaults for its output file.

    o	R CMD check now also fully checks the Depends field in the
	package DESCRIPTION file.

    o	codoc() now also checks whether all arguments shown in \usage
	are documented in \arguments.

    o	The startup processing now interprets escapes in the values of
	environment variables set in R_HOME/etc/Renviron in a similar
	way to most shells.

    o	scan() allows unlimited (by R) lengths of input lines, instead
	of a limit of 8190 chars.

    o	Ops, cbind, diff and na.omit methods for time series objects
	moved from package ts to package base.



BUG FIXES

    o	Fixed an inconsistency in the evaluation context for on.exit
	expressions between explicit calls to `return' and falling off
	the end returns.




	**************************************************
	*						 *
	*	       1.3 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.3.1


NEW FEATURES

    o	massage-examples is now a Perl script and about 50x faster.

    o	On Unix(-alike) systems the default pager is now determined
	during configuration, and is `less' if available, otherwise
	`more' (and not `more -s' as previously).

    o	configure now tests for strptime functions that fail on inputs
	before 1970 (found on Irix).  It no longer checks for the SCSL
	and SGIMATH libraries on Irix.

    o	New formula interface to cor.test() in package ctest.
